op_new_array_buffer is not inlined correctly https://bugs.webkit.org/show_bug.cgi?id=70770

Source/JavaScriptCore: 

Reviewed by Oliver Hunt.
        
Disabled inlining of op_new_array_buffer, for now.

* dfg/DFGCapabilities.h:
(JSC::DFG::canInlineOpcode):

LayoutTests: 

Reviewed by Oliver Hunt.

* fast/js/dfg-inline-new-array-buffer-expected.txt: Added.
* fast/js/dfg-inline-new-array-buffer.html: Added.
* fast/js/script-tests/dfg-inline-new-array-buffer.js: Added.
(foo):
(bar):



git-svn-id: svn://svn.chromium.org/blink/trunk@98296 bbb929c8-8fbe-4397-9dbb-9b2b20218538