Source/JavaScriptCore/dfg/DFGCapabilities.h
@@ -181,6 +181,10 @@ inline bool canInlineOpcode(OpcodeID opcodeID)
     case op_resolve_base:
     case op_resolve_global:
         
+    // Constant buffers aren't copied correctly. This is easy to fix, but for
+    // now we just disable inlining for functions that use them.
+    case op_new_array_buffer:
+        
     // Inlining doesn't correctly remap regular expression operands.
     case op_new_regexp:
         return false;
