third_party/WebKit/LayoutTests/fast/js/script-tests/dfg-inline-new-array-buffer.js
@@ -1,0 +1,25 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description(
+"This tests that inlining correctly handles constant buffers."
+);
+
+function foo() {
+    return [1, 2, 3, 4];
+}
+
+function bar() {
+    return foo();
+}
+
+for (var i = 0; i < 1000; ++i) {
+    bar();
+}
+
+for (var i = 0; i < 10; ++i) {
+    shouldBe("bar()[0]", "1")
+    shouldBe("bar()[1]", "2")
+    shouldBe("bar()[2]", "3")
+    shouldBe("bar()[3]", "4")
+}
+
+var successfullyParsed = true;
